--- a/css/util.css
+++ b/css/util.css
@@ -5,7 +5,7 @@
     border: 1px solid var(--reset-btn-bg);
     background-color: var(--reset-btn-bg);
     color: var(--bg-prim);
-    margin-top: 2rem;
+    margin-top: auto;
     padding: .8rem 1.6rem;
     border-radius: 100vh;
 }
